[gd_scene load_steps=8 format=3 uid="uid://cin1y38ee5imk"]

[ext_resource type="Script" path="res://scripts/game_ui.gd" id="1_dh7e1"]
[ext_resource type="LabelSettings" uid="uid://gs1ykc1rl882" path="res://assets/lg_48_gray.tres" id="1_u32vm"]
[ext_resource type="LabelSettings" uid="uid://wx4fsg1ugom" path="res://assets/lg_96_blue.tres" id="2_eyoqh"]
[ext_resource type="LabelSettings" uid="uid://r8osrmp1felh" path="res://assets/lg_48_yellow.tres" id="3_fgh6s"]
[ext_resource type="AudioStream" uid="uid://cpnh06igf6l6f" path="res://assets/audio/jazzyfrenchy.mp3" id="4_vx857"]

[sub_resource type="Animation" id="Animation_8qba7"]
resource_name = "flash"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MC/VBLevelComplete/PressSpaceLabel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ysy6l"]
_data = {
"flash": SubResource("Animation_8qba7")
}

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_dh7e1")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VB" type="VBoxContainer" parent="MC"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MC/VB"]
unique_name_in_owner = true
layout_mode = 2
text = "Level: 1"
label_settings = ExtResource("1_u32vm")

[node name="AttemptsLabel" type="Label" parent="MC/VB"]
unique_name_in_owner = true
layout_mode = 2
text = "Attempts: 10"
label_settings = ExtResource("1_u32vm")

[node name="VBLevelComplete" type="VBoxContainer" parent="MC"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LevelCompleteLabel" type="Label" parent="MC/VBLevelComplete"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Level Complete"
label_settings = ExtResource("2_eyoqh")

[node name="PressSpaceLabel" type="Label" parent="MC/VBLevelComplete"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Click To Play"
label_settings = ExtResource("3_fgh6s")
horizontal_alignment = 1

[node name="LevelCompleteMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_vx857")

[node name="PressSpaceLabelTimer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ysy6l")
}
autoplay = "flash"

[connection signal="timeout" from="PressSpaceLabelTimer" to="." method="_on_press_space_label_timer_timeout"]
